tests/fixtures/positive/supply-chain/version-catalog-build-src-mismatch/app/build.gradle.kts
plugins {
    kotlin("jvm")
}

dependencies {
    implementation(libs.okhttp)
}
