tests/fixtures/negative/supply-chain/version-catalog-duplicate-version/app/build.gradle.kts
plugins {
    alias(libs.plugins.android.application)
}

dependencies {
    implementation(libs.okhttp)
}
